--- a/PS.Zones/PS.Zones.csproj
+++ b/PS.Zones/PS.Zones.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Models\Perform\PolygonZone.cs" />
     <Compile Include="Models\Perform\RoundZone.cs" />
     <Compile Include="Models\Perform\Zone.cs" />
+    <Compile Include="Models\Perform\PSZones.cs" />
+    <Compile Include="Models\Perform\ZonesEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +68,7 @@
     <Reference Include="SDG.NetTransport">
       <HintPath>..\..\DI.Library\DI.Library\bin\Release\SDG.NetTransport.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\DI.Library\DI.Library\bin\Release\UnityEngine.dll</HintPath>
